--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "client:dev": "cd client && npm run dev",
     "build": "cd server && npm run build",
     "seed": "cd server && npm run seed",
-    "render-build": "npm install && npm run build"
+    "render-build": "npm install && npm run build",
+    "test": "npx cypress run --browser electron --headless",
+    "test:component": "npx cypress run --component"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +24,7 @@
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
-    "cypress": "^13.13.1",
+    "cypress": "^13.17.0",
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
